deployment/kubernetes/manifests/gateway-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway-service
    role: bankops-core
  name: gateway-service
  namespace: bankops-core
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: gateway-service
      role: bankops-core
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: gateway-service
        role: bankops-core
    spec:
      containers:
        - name: gateway
          ports:
            - containerPort: 8080
              protocol: TCP
          image: shaekhhasan/bankapp-core:gateway-service-v1.0.0
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 15
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
      restartPolicy: Always
