deployment/kubernetes/manifests/gateway-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway-service
    role: bankops-core
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
  name: gateway-service
  namespace: bankops-core
spec:
  ports:
    - name: http-rest
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: http-metrics
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway-service
    role: bankops-core
  type: ClusterIP
